src/Post.css
.post {
  width: 100%;
  margin-top: 1rem;
  border-radius: 15px;

  background-color: white;
  box-shadow: 0 5px 7px -7px rgba(0, 0, 0, 0.75);
}

.post__top {
  display: flex;
  justify-content: space-between;
  padding: 1rem;
}

.post__topLeft {
  display: flex;
  position: relative;
  align-items: center;
}

.post__avatar {
  margin-right: 10px;
}

.post__username {
  font-size: 15px;
}

.post__topInfo > p {
  font-size: small;
  color: grey;
  display: flex;
  align-items: center;
}

.post__topInfo > p > .MuiSvgIcon-root {
  font-size: 1rem;
  margin-left: 3px;
  color: #656b74;
}

.post__bottom {
  margin: 0 0 10px;
  padding: 10px 15px;
}

.post__image > img {
  width: 100%;
  height: 500px;
  object-fit: contain;
  margin: -4px;
}

.post__options {
  cursor: pointer;
  display: flex;
  justify-content: space-evenly;
  margin: 0 auto;

  width: 90%;
  padding: 10px 10px 10px;
  border-top: 1px solid #ced0d4;

  font-size: medium;
  color: grey;
}

.post__option {
  display: flex;
  flex: 1;
  align-items: center;
  justify-content: center;

  padding: 5px;
}

.post__option > p {
  margin-left: 10px;
}

.post__option:hover {
  background-color: #eff2f5;
  color: rgb(68, 68, 68);
  border-radius: 10px;
}

